# bootcamp-python

./: pyproject.toml
aula03_bootcamp/: desafio.py
aula04_bootcamp/: algoritmo.py  arquivos.py  exemplo.csv  main.py
aula06_bootcamp/: main.py
aula07_bootcamp/: etl.py  main.py
aula08_bootcamp/: dados.csv  etl.py
aula09_bootcamp/: etl.py  exemplo_00.py  logging_exemplo_erros.py
aula11_bootcamp/: exemplo.csv  exemplo2.csv
aula11_bootcamp/src/: usar_class.py
aula11_bootcamp/src/interface/classes/: csv_class.py
