[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["guilherme-ssanto <guilhermesantossilva@id.uff.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blue = "^0.9.1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
